add clustering and panama interface to native libs